--- a/package.yaml
+++ b/package.yaml
@@ -14,7 +14,8 @@ extra-source-files:
 dependencies:
   - base >= 4.7 && < 5
   - regex-compat
-  
+  - random
+
 executables:
   finnblackjackhs:
     source-dirs:      src
